syntax = "proto2";

package troll;

message Event {
  optional string event_id = 1;
  repeated string scene_node_id = 2;
}
